feat(favorite): add openapi for client side
